Fix spacing and sizing of email icon

--- a/contact.css
+++ b/contact.css
@@ -119,8 +119,7 @@ hr {
 }
 
 .email-icon span:nth-of-type(1) {
-    font-size: 80px;
-    margin-top: -30px;
+    font-size: 50px;
 }
 
 .email-icon span:nth-of-type(2) {
